--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				"sec-fetch-dest": "empty",
 				"sec-fetch-mode": "cors",
 				"sec-fetch-site": "same-origin",
-				"cookie": "_ga=GA1.2.1916533750.1677228212; _gid=GA1.2.917192492.1677228212; _gat=1; _fbp=fb.1.1677228211729.44789048; __qca=P0-1553972469-1677228211637; connect.sid=s%3AcrLibZy3hEDdROZE31BgxVGuKaAROOe4.NwvF1UQmnsfK27nUpBOV%2F6MyrTAXZH%2BQGZt6lFVa%2BU0; i18next=es; __gads=ID=c3d10ccd1ddf4b0a:T=1677228232:S=ALNI_MZuNJR8e825g5vWf8CiV3aZXBnWBQ; __gpi=UID=00000bde47835eec:T=1677228232:RT=1677228232:S=ALNI_MYYf8GCu7CF0AkgjxPK2Ekm4V9JIg"
+				"cookie": "_ga=GA1.2.1005432468.1641145685; i18next=es; _gid=GA1.2.1823068525.1677398594; _gat=1; __qca=P0-1283481563-1677398594226; _fbp=fb.1.1677398594493.632617944; connect.sid=s:jxigPkTGVfZYbS7jekNJz5sPHPe6AH54./kTVrAYfzziCEm6ykDeYy5v4axHuYwJBeFzdBZWUg5k; __gads=ID=1656f1be5a8fcda2:T=1677398563:S=ALNI_Ma9ZYD-l6PkZzviof5UyQkQdokrvw; __gpi=UID=00000bdf190f1050:T=1677398563:RT=1677398563:S=ALNI_MZtmf8Py5TvZ-CTmVP8tjTqLfQ-zQ"
 			  },
 			  "referrer": "https://www.futmondo.com/index",
 			  "referrerPolicy": "strict-origin-when-cross-origin",
